--- a/First_project/test-output/emailable-report.html
+++ b/First_project/test-output/emailable-report.html
@@ -9,11 +9,11 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">2</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">220</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">2</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">52,794</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">com.First_project.generic.Demo</td><td><a href="#m0">demo</a></td><td rowspan="1">1669989637556</td><td rowspan="1">49</td></tr><tr class="passedeven"><td><a href="#m1">demo1</a></td><td rowspan="1">1669989637653</td><td rowspan="1">3</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">com.First_project.testscript.Login</td><td><a href="#m0">login</a></td><td rowspan="2">1671801889268</td><td rowspan="2">31989</td></tr><tr class="passedeven"><td><a href="#m1">login</a></td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">com.First_project.generic.Demo#demo</h3><table class="result"><tr><th>Messages</th></tr><tr><td><div class="messages">maven project</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">com.First_project.generic.Demo#demo1</h3><table class="result"><tr><th>Messages</th></tr><tr><td><div class="messages">maven project2</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Default test</h2><h3 id="m0">com.First_project.testscript.Login#login</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th></tr><tr class="param stripe"><td>admin</td><td>manager</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">com.First_project.testscript.Login#login</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th></tr><tr class="param stripe"><td>admin123</td><td>manager123</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
