--- a/First_project/test-output/index.html
+++ b/First_project/test-output/index.html
@@ -51,7 +51,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\sai\AppData\Local\Temp\testng-eclipse-1232600213\testng-customsuite.xml</span>
+                    <span>C:\Users\sai\AppData\Local\Temp\testng-eclipse--443241576\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -104,12 +104,12 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="com.First_project.generic.Demo" class="method navigator-link" hash-for-method="demo">demo</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="com.First_project.testscript.Login" class="method navigator-link" hash-for-method="login(admin, manager)">login(admin, manager)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="com.First_project.generic.Demo" class="method navigator-link" hash-for-method="demo1">demo1</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="com.First_project.testscript.Login" class="method navigator-link" hash-for-method="login(admin123, manager123)">login(admin123, manager123)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -127,21 +127,23 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">com.First_project.generic.Demo</span>
+              <span class="class-name">com.First_project.testscript.Login</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="demo">
-                  </a> <!-- demo -->
-                  <span class="method-name">demo</span>
+                  <a name="login(admin, manager)">
+                  </a> <!-- login(admin, manager) -->
+                  <span class="method-name">login</span>
+                  <span class="parameters">(admin, manager)</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="demo1">
-                  </a> <!-- demo1 -->
-                  <span class="method-name">demo1</span>
+                  <a name="login(admin123, manager123)">
+                  </a> <!-- login(admin123, manager123) -->
+                  <span class="method-name">login</span>
+                  <span class="parameters">(admin123, manager123)</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -149,7 +151,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\sai\AppData\Local\Temp\testng-eclipse-1232600213\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\sai\AppData\Local\Temp\testng-eclipse--443241576\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -158,7 +160,7 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;com.First_project.generic.Demo&quot;/&gt;
+      &lt;class name=&quot;com.First_project.testscript.Login&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -200,18 +202,18 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(2);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'demo')
-data.setCell(0, 2, 'com.First_project.generic.Demo')
-data.setCell(0, 3, 49);
+data.setCell(0, 1, 'login')
+data.setCell(0, 2, 'com.First_project.testscript.Login')
+data.setCell(0, 3, 31989);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'demo1')
-data.setCell(1, 2, 'com.First_project.generic.Demo')
-data.setCell(1, 3, 3);
+data.setCell(1, 1, 'login')
+data.setCell(1, 2, 'com.First_project.testscript.Login')
+data.setCell(1, 3, 19713);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 52 ms</span>
+              <span class="suite-total-time">Total running time: 51 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -222,18 +224,6 @@ return data;
             <span class="header-content">Reporter output for Default suite</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
-            <div class="reporter-method-div">
-              <span class="reporter-method-name">demo1</span>
-              <div class="reporter-method-output-div">
-                <span class="reporter-method-output">maven project2</span>
-              </div> <!-- reporter-method-output-div -->
-            </div> <!-- reporter-method-div -->
-            <div class="reporter-method-div">
-              <span class="reporter-method-name">demo</span>
-              <div class="reporter-method-output-div">
-                <span class="reporter-method-output">maven project</span>
-              </div> <!-- reporter-method-output-div -->
-            </div> <!-- reporter-method-div -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
         <div panel-name="ignored-methods-Default_suite" class="panel">
@@ -249,14 +239,14 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">com.First_project.generic.Demo</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">com.First_project.testscript.Login</div> <!-- chronological-class-name -->
               <div class="test-method">
-                <span class="method-name">demo</span>
+                <span class="method-name">login(admin, manager)</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
-                <span class="method-name">demo1</span>
-                <span class="method-start">97 ms</span>
+                <span class="method-name">login(admin123, manager123)</span>
+                <span class="method-start">31994 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
