--- a/First_project/test-output/old/Default suite/reporter-output.html
+++ b/First_project/test-output/old/Default suite/reporter-output.html
@@ -1,3 +1,1 @@
-<h2>Reporter output</h2><table><tr><td>maven project</td></tr>
-<tr><td>maven project2</td></tr>
-</table>
+<h2>Reporter output</h2><table></table>
